[package]
name = "ssh-box"
version = "0.0.0"
authors = ["Tony Finch <dot@dotat.at>"]
edition = "2021"

[dependencies]
aes = { version = "~0", features = ["ctr"] }
anyhow = "~1"
bcrypt-pbkdf = "~0"
getopts = "~0"
atty = "~0"
nom = "~7"
rand = "~0"
rpassword = "~5"
rsa = "~0"
sha2 = "~0"
sodiumoxide = "~0"
